# Gazebo-Drone-Simulator

./: Dockerfile  README.md  docker-compose.mac.yml  docker-compose.windows.yml  docker-compose.yml  run_sim.sh
Gazebo Simulation Test/: .gitignore  Dockerfile
docker/: entrypoint.sh
docker/mac/: docker-compose.mac.yml  docker-compose.yml  dockerfile
docker/windows/: docker-compose.yml  dockerfile  entrypoint.sh
macSetup/docker/: entrypoint.sh
src/offboard_control/: CMakeLists.txt  package.xml
src/offboard_control/src/: offboard_control_node.cpp
src/swarm_drone/: CMakeLists.txt
src/swarm_drone/install/: setup.ps1  setup.zsh
src/swarm_test/: CMakeLists.txt  package.xml
src/swarm_test/src/: my_first_node.cpp
src/test/: package.xml
src/test/install/: local_setup.sh  setup.bash  setup.sh
src/test/log/: latest_build
src/test/src/: thermal_sensor_node.cpp
